# FORGE

./: .env.example  .gitignore  .replit  USER_MANUAL.md  package-lock.json  package.json  pyproject.toml  replit.md
attached_assets/: Pasted--workspace-200-1-Remove-any-Git-locks-1-Remove-any-Git-locksbash-command-not-found--1762802972843_1762802972843.txt
backend/: app.py  config.py  forge_backend.spec  pyproject.toml
backend/providers/: base.py  lmstudio.py  openai_cloud.py
backend/routers/: health.py  help.py  jobs.py  projects.py  workspace.py
backend/services/: chunker.py  conversational_orchestrator.py  evaluator.py  llm_router.py  orchestrator.py  repo_scaffold.py
backend/storage/: db.py
backend/worker/: queue_worker.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  styles.css
frontend/src/components/: ArtifactsTab.jsx  ChatTab.jsx  HelpTab.jsx
frontend/src/panes/: CenterPane.jsx  LeftPane.jsx  RightPane.jsx  TabbedPane.jsx
installers/mac/: README.md
installers/windows/: forge.iss
launcher/: forge-builder.config.json  main.js  package.json
