[project]
name = "forge-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "pydantic-settings",
  "python-dotenv",
  "requests",
  "jinja2",
  "sqlalchemy",
  "urllib3<2.3",
  "pytest",
]

[tool.pytest.ini_options]
addopts = "-q"
